# RFNoC-QPSK4.0

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md
cmake/Modules/: qpskConfig.cmake
docs/: README.qpsk
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: PulseShapingFilter.grc  conv32Bto2B.grc  costas.grc  rfnoc_conv32Bto2B.py
grc/: CMakeLists.txt  qpsk.tree.yml  qpsk_PulseShapingFilter.block.yml  qpsk_conv32Bto2B.block.yml  qpsk_costas.block.yml
include/qpsk/: CMakeLists.txt  PulseShapingFilter.h  PulseShapingFilter_block_ctrl.hpp  api.h  conv32Bto2B.h  conv32Bto2B_block_ctrl.hpp  costas.h  costas_block_ctrl.hpp
lib/: CMakeLists.txt  PulseShapingFilter_block_ctrl_impl.cpp  PulseShapingFilter_impl.cc  PulseShapingFilter_impl.h  conv32Bto2B_block_ctrl_impl.cpp  conv32Bto2B_impl.cc  conv32Bto2B_impl.h  costas_block_ctrl_impl.cpp  costas_impl.cc  costas_impl.h  qa_qpsk.cc  qa_qpsk.h  test_qpsk.cc
python/: CMakeLists.txt  __init__.py
rfnoc/blocks/: CMakeLists.txt  PulseShapingFilter.yml  conv32Bto2B.yml  costas.yml
rfnoc/fpga/: CMakeLists.txt  Makefile.srcs
rfnoc/fpga/ip/add_pre_phase/: Makefile.inc  add_pre_phase.xci
rfnoc/fpga/ip/c_addsub_0/: Makefile.inc  c_addsub_0.xci
rfnoc/fpga/ip/cmpy_0/: Makefile.inc  cmpy_0.xci
rfnoc/fpga/ip/nco/: Makefile.inc  nco.xci
rfnoc/fpga/ip/pulse_shaping_filter/: Makefile.inc  pulse_shaping_filter.xci
rfnoc/fpga/rfnoc_block_PulseShapingFilter/: .gitignore  Makefile  Makefile.srcs  noc_shell_PulseShapingFilter.v  rfnoc_block_PulseShapingFilter.v  rfnoc_block_PulseShapingFilter_tb.sv
rfnoc/fpga/rfnoc_block_conv32Bto2B/: Makefile  Makefile.srcs  QPSK_data_converter.v  Repeater.v  noc_shell_conv32Bto2B.v  rfnoc_block_conv32Bto2B.v  rfnoc_block_conv32Bto2B_tb.sv  rfnoc_block_conv32Bto2B_tb.sv.bak
rfnoc/fpga/rfnoc_block_costas/: CMakeLists.txt  Makefile  Makefile.srcs  loop_filter.v  noc_shell_costas.v  polar_costas.v  polar_costas_1.v  rfnoc_block_costas.v  rfnoc_block_costas_tb.sv
rfnoc/icores/: CMakeLists.txt  PulseShapingFilter_x310_rfnoc_image_core.yml  conv32Bto2B_x310_rfnoc_image_core.yml  costas_x310_rfnoc_image_core.yml  mmt_e310_rfnoc_image_core.yml  my_x310_rfnoc_image_core.yml  x310_rfnoc_image_core.v  x310_rfnoc_image_core.vh  x310_static_router.hex
simulation/: .gitignore  README.md  demo.m  gen_qpsk.py  getFilter.m  load_plot.py  main.m  polyphase.m  polyphase_clock_sync.m  qpsk_tx_gen.m  save_sim_data.m  sim_qpsk_demod.m  test_fir.m
simulation/costas/: gen_qpsk.py  load_plot.py  load_plot_gif.py  sim_qpsk_demod.m
simulation/polyphase/: load_plot_mat.py  main.m  polyphase_clock_sync.m
simulation/pulse-shaping/: README.md  gen_qpsk_raw_pulse.py  load_plot.py  myrrc.m  pulse-shaping.py  rrc_sps4.csv
simulation/qpsk-mod/: load_plot.py
simulation/utils/: gen_sim_data_from_mat.py  load_tools.py  np_tools.py
swig/: CMakeLists.txt  qpsk_swig.i
